# bachelor-thesis

./: .gitignore  README.md  experiment.py  main.py  pyproject.toml  schemas.py  utils.py
clutrr/: preprocess.py
data/clutrr/: relations_store.yaml
data/clutrr/data_089907f8/: 1.10_test.csv  1.2_test.csv  1.3_test.csv  1.4_test.csv  1.5_test.csv  1.6_test.csv  1.7_test.csv  1.8_test.csv  1.9_test.csv  small  tiny
data/clutrr/data_7c5b0e70/: dict.json
experiments/: definitions.py  persist.py  runner.py
graph/: base.py  complete_graph.py  dependency_graph.py  kinship_graph.py  schemas.py  total_graph.py
models/: base.py  bert.py  decoder.py  edge_gat.py  edge_gcn.py  factory.py  feed_forward.py  ff_positional_emb.py  gcn.py  gcn_base.py  rnn.py
nlp/: embeddings.py  kinship_graph_construction.py  tokenization.py
notebooks/: clutrr.ipynb  clutrr_attn.py  clutrr_neuralogic.py  clutrr_transformer.py  clutrr_transformers.ipynb  learn.py
results/: main.py  plots.py  store.py
